--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # 也升级到最新版本
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -23,7 +23,7 @@ jobs:
         run: npx playwright test
 
       - name: Upload test results
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3  # 更新到最新版本
         if: always()
         with:
           name: playwright-test-results
