--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -34,6 +34,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+
+      - name: Setup Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1280x720x24 &
+          echo "DISPLAY=:99" >> $GITHUB_ENV
+
       - name: Install Playwright Chromium
         run: npx playwright install chromium
 
